[fix] news tag z-index

--- a/src/sass/base/_vars.scss
+++ b/src/sass/base/_vars.scss
@@ -25,9 +25,10 @@ $space-quarter: $space * 0.25;
 // Z-index
 //============================================
 
-$z-aside:  4;
-$z-header: 3;
-$z-nav:    2;
+$z-aside:  5;
+$z-header: 4;
+$z-nav:    3;
+$z-tag:    2;
 $z-news:   1;
 
 // Typography
